--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "homepage": "https://Mishalgupta.github.io/WeatherAppReact",
+  "homepage": "https://mishalgupta.github.io/WeatherAppReact/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
